// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrismaPrinter Prints ast -> schema correctly for a complete example 1`] = `
"datasource db1 {
  provider = \\"mysql\\"
  url = \\"mysql://localhost:3306\\"
}
datasource db2 {
  provider = \\"postgresql\\"
  url = \\"postgresql://localhost:5432\\"
}
datasource db3 {
  provider = \\"sqlite\\"
  url = \\"file:dev.db\\"
  enabled = true
}
generator photon {
  provider = \\"photonjs\\"
}
model User {
  id     Int @id
  name   String
  email  String
  age    Int?
  posts  Post[]
}
model Post {
  id       Int @id
  title    String
  content  String
  author   User
}"
`;

exports[`PrismaPrinter Prints indentation correctly 1`] = `
"    model User    {
          id     Int   @id
name   String
}"
`;

exports[`PrismaPrinter Prints multiple new lines between columns correctly 1`] = `
"model User {
  id Int @id


  name String
}"
`;

exports[`PrismaPrinter Prints multiple new lines between declarations correctly 1`] = `
"datasource db1 {
  provider = \\"mysql\\"



  url = \\"mysql://localhost:3306\\"
}"
`;

exports[`PrismaPrinter Prints multiple new lines between scopes correctly 1`] = `
"datasource db1 {
  provider = \\"mysql\\"
  url = \\"mysql://localhost:3306\\"
}



datasource db2 {
  provider = \\"postgresql\\"
  url = \\"postgresql://localhost:5432\\"
}"
`;
